fix: Call to action container spacing

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -208,7 +208,7 @@ $quote-font-weight: 300;
     align-items: center;
     background-color: $button-background-color;
     border-radius: 0.5rem;
-    padding: 3rem 6rem;
+    padding: 2rem 6rem;
 
     > div {
       width: 100%;
